#747 fix position .EndClassWidgetValuesWrapper.expanded and z-index

--- a/scss/components/citeriagroup/startendclassgroup/_startendclassgroup.scss
+++ b/scss/components/citeriagroup/startendclassgroup/_startendclassgroup.scss
@@ -21,7 +21,7 @@
     position: relative;
     min-width: auto;
     display: flex;
-    z-index: 10;
+    z-index: auto;
 
     .EditComponents {
         position: absolute;
