--- a/scss/components/widget/_EndClassWidgetGroup.scss
+++ b/scss/components/widget/_EndClassWidgetGroup.scss
@@ -17,7 +17,7 @@
             position: absolute;    
             z-index: 100; // Increase z-index
             top: -2px;
-            left: 15px;
+            left: 0;
             background: #fff;
             border: 1px solid #ddd;
             border-radius: 5px;
